--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/eframework-org/VSC.GO"
+		"url": "git+https://github.com/eframework-org/VSC.GO.git"
 	},
 	"bugs": {
 		"url": "https://github.com/eframework-org/VSC.GO/issues"
