refactor: 调整多语言文件的目录（l10n -> res）

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"onDebugResolve:go"
 	],
 	"main": "./dist/extension.js",
-	"l10n": "./l10n",
+	"l10n": "./res",
 	"scripts": {
 		"vscode:prepublish": "rm -rf dist && npm install && webpack --mode production",
 		"debug": "tsc",
