chore: 修改测试工作流

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,11 +58,11 @@ jobs:
             exit 1
           fi
           
-          # 检查版本号是否已存在
-          if git rev-parse "v$VERSION" >/dev/null 2>&1; then
-            echo "错误：版本 v$VERSION 已存在"
-            exit 1
-          fi
+          # # 检查版本号是否已存在
+          # if git rev-parse "v$VERSION" >/dev/null 2>&1; then
+          #   echo "错误：版本 v$VERSION 已存在"
+          #   exit 1
+          # fi
           
           echo "new_version=$VERSION" >> $GITHUB_OUTPUT
           echo "将发布版本：v$VERSION"
