chore: 优化发布工作流

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,11 +58,11 @@ jobs:
             exit 1
           fi
           
-          # # 检查版本号是否已存在
-          # if git rev-parse "v$VERSION" >/dev/null 2>&1; then
-          #   echo "错误：版本 v$VERSION 已存在"
-          #   exit 1
-          # fi
+          # 检查版本号是否已存在
+          if git rev-parse "v$VERSION" >/dev/null 2>&1; then
+            echo "错误：版本 v$VERSION 已存在"
+            exit 1
+          fi
           
           echo "new_version=$VERSION" >> $GITHUB_OUTPUT
           echo "将发布版本：v$VERSION"
@@ -156,13 +156,12 @@ jobs:
           VERSION="${{ needs.prepare.outputs.new_version }}"
           CURRENT_VERSION=$(node -p "require('./package.json').version")
           
-          # if [ "$VERSION" != "$CURRENT_VERSION" ]; then
-          #   echo "更新版本号: $CURRENT_VERSION -> $VERSION"
-          #   npm version $VERSION --no-git-tag-version
-          # else
-          #   echo "版本号未变更，保持 $VERSION"
-          # fi
-          npm version $VERSION --no-git-tag-version
+          if [ "$VERSION" != "$CURRENT_VERSION" ]; then
+            echo "更新版本号: $CURRENT_VERSION -> $VERSION"
+            npm version $VERSION --no-git-tag-version
+          else
+            echo "版本号未变更，保持 $VERSION"
+          fi
 
       - name: 构建离线版本
         id: package
@@ -173,44 +172,44 @@ jobs:
           echo "vsix_file=$VSIX_FILE" >> $GITHUB_OUTPUT
           echo "构建完成: $VSIX_FILE"
       
-      # - name: 发布至 Visual Studio Marketplace
-      #   env:
-      #     VSCE_PUBLISH: ${{ secrets.VSCE_PUBLISH }}
-      #   run: |
-      #     npm install -g vsce
-      #     vsce publish --pat $VSCE_PUBLISH
+      - name: 发布至 Visual Studio Marketplace
+        env:
+          VSCE_PUBLISH: ${{ secrets.VSCE_PUBLISH }}
+        run: |
+          npm install -g vsce
+          vsce publish --pat $VSCE_PUBLISH
 
-      # - name: 发布至 Open VSX Registry
-      #   env:
-      #     OVSX_PUBLISH: ${{ secrets.OVSX_PUBLISH }}
-      #   run: |
-      #     npm install -g ovsx
-      #     ovsx publish --pat $OVSX_PUBLISH
+      - name: 发布至 Open VSX Registry
+        env:
+          OVSX_PUBLISH: ${{ secrets.OVSX_PUBLISH }}
+        run: |
+          npm install -g ovsx
+          ovsx publish --pat $OVSX_PUBLISH
 
-      # - name: 提交版本标签
-      #   shell: bash
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: |
-      #     VERSION="${{ needs.prepare.outputs.new_version }}"
-      #     git config --global user.email "github-actions[bot]@users.noreply.github.com"
-      #     git config --global user.name "github-actions[bot]"
+      - name: 提交版本标签
+        shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          VERSION="${{ needs.prepare.outputs.new_version }}"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
 
-      #     # 提交版本
-      #     git add package.json
-      #     if [ -f "package-lock.json" ]; then
-      #       git add package-lock.json
-      #     fi
-      #     git commit -m "chore: 发布 v$VERSION" || true
+          # 提交版本
+          git add package.json
+          if [ -f "package-lock.json" ]; then
+            git add package-lock.json
+          fi
+          git commit -m "chore: 发布 v$VERSION" || true
           
-      #     # 创建标签
-      #     git tag -a "v$VERSION" -m "chore: 发布 v$VERSION"
+          # 创建标签
+          git tag -a "v$VERSION" -m "chore: 发布 v$VERSION"
           
-      #     # 拉取提交
-      #     git pull origin
+          # 拉取提交
+          git pull origin
 
-      #     # 推送版本
-      #     git push origin --follow-tags
+          # 推送版本
+          git push origin --follow-tags
 
       - name: 创建 GitHub Release
         uses: softprops/action-gh-release@v2
